--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SITE_NAME_HEADER=Digital Garden Docs
+SITE_NAME_HEADER=Digital Garden Docs (Community)
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL=dg-docs.ole.dev
+SITE_BASE_URL=palol.github.io/dg-obs-wiki/
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy HH:mm
 SHOW_UPDATED_TIMESTAMP=true
